--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 ACCOUNT=
 PASSWORD=
 PRODUCT_PAGE=https://unstable-shop.fly.dev/products/3
+PRODUCT_NAME=日本 because Parasol Umbrella 折疊傘/ 刺繡花瓣/ 黑
+
+# PRODUCT_PAGE=https://unstable-shop.fly.dev/products/4
+# PRODUCT_NAME=HOOOME蠟燭暖燈/ 可調升降大理石/ 白
